# dl4ba

./: .gitignore  pyproject.toml  requirements.txt
assignment_one/: ClassicApproach.ipynb  NaiveBayes.ipynb  TextClassificationCNN-Glove.ipynb  TextClassificationCNN-Glove.py  TextClassificationCNN.ipynb  TextClassificationRNN.ipynb
datasets/: gcc_data.csv  jdt_data.csv
