[project]
name = "nlp_project"
version = "0.1.0"
description = ""
authors = [
    {name = "a.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torchdata (>=0.11.0,<0.12.0)",
    "torch (>=2.7.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
]

[tool.poetry]
packages = [{include = "*", from = "."}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
